painel de controle

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Painel de Controle</title>
 </head>
@@ -10,9 +10,170 @@
     <header>
         <h1>Painel de Controle</h1>
     </header>
-    <main></main>
+    <main>
+        <a href="./funcao/autodesk.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/1.PNG" alt="backup-e-restauracao">
+            <span class="item-titulo">Autodesk Plot Style Manager</span>
+        </a>
+        <a href="./funcao/autodesk2.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/2.PNG" alt="backup-e-restauracao">
+            <span class="item-titulo">Autodesk Plotter Manager</span>
+        </a>
+        <a href="./funcao/backup.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/3.PNG" alt="backup-e-restauracao">
+            <span class="item-titulo">Backup e Restauração (Windows 7)</span>
+        </a>
+        <a href="./funcao/tarefas.html" target="blank" class="item-conteiner" title="Executar: control.exe /name Microsoft.TaskbarandStartMenu">
+            <img class="item-imagem" src="./icones/4.PNG" alt="barra-de-tarefas-e-navegacao">
+            <span class="item-titulo">Barra de Tarefas e Navegação</span>
+        </a>
+        <a href="./funcao/facilidade.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/5.PNG" alt="central-de-facilidade-de-acesso">
+            <span class="item-titulo">Central de Facilidade de Acesso</span>
+        </a>
+        <a href="./funcao/rede.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/6.PNG" alt="central-de-rede-e-compartilhamento">
+            <span class="item-titulo">Central de Rede e Compartilhamento</span>
+        </a>
+        <a href="./funcao/sincronização.html" target="blank" class="item-conteiner" title="Executar: mobsync">
+            <img class="item-imagem" src="./icones/7.PNG" alt="central-de-sincronizacao">
+            <span class="item-titulo">Central de Sincronização</span>
+        </a>
+        <a href="./funcao/remoteapp.html" target="blank" class="item-conteiner" title="Executar: mstsc">
+            <img class="item-imagem" src="./icones/8.PNG" alt="conexoes-de-remoteapp-e-area-de-trabalho">
+            <span class="item-titulo">Conexões de Remote App e Área de Trabalho</span>
+        </a>
+        <a href="./funcao/usuario.html" target="blank" class="item-conteiner" title="Executar: control.exe /name Microsoft.Useraccounts">
+            <img class="item-imagem" src="./icones/9.PNG" alt="contas-de-usuario">
+            <span class="item-titulo">Contas de Usuário</span>
+        </a>
+        <a href="./funcao/criptografia.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/10.PNG" alt="criptografia-de-unidade-de-disco-bitlocker">
+            <span class="item-titulo">Criptografia de Unidade de disco BitLocker</span>
+        </a>
+        <a href="./funcao/dataehora.html" target="blank" class="item-conteiner" title="Executar: timedate.cpl">
+            <img class="item-imagem" src="./icones/11.PNG" alt="data-e-hora">
+            <span class="item-titulo">Data e Hora</span>
+        </a>
+        <a href="./funcao/dispeimp.html" target="blank" class="item-conteiner" title="Executar: control printers">
+            <img class="item-imagem" src="./icones/12.PNG" alt="dispositivos-e-impressoras">
+            <span class="item-titulo">Dispositivos e Impressoras</span>
+        </a>
+        <a href="./funcao/armazenamento.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/13.PNG" alt="espacos-de-armazenamento">
+            <span class="item-titulo">Espaços de Armazenamento</span>
+        </a>
+        <a href="./funcao/admin.html" target="blank" class="item-conteiner" title="Executar: control admintools">
+            <img class="item-imagem" src="./icones/14.PNG" alt="ferramentas-administrativas">
+            <span class="item-titulo">Ferramentas Administrativas</span>
+        </a>
+        <a href="./funcao/fontes.html" target="blank" class="item-conteiner" title="Executar: fonts">
+            <img class="item-imagem" src="./icones/15.PNG" alt="fontes">
+            <span class="item-titulo">Fontes</span>
+        </a>
+        <a href="./funcao/creden.html" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/16.PNG" alt="gerenciador-de-credenciais">
+            <span class="item-titulo">Gerenciador de Credenciais</span>
+        </a>
+        <a href="./funcao/gdispos.html" target="blank" class="item-conteiner" title="Executar: hdwwiz.cpl ou devmgmt.msc">
+            <img class="item-imagem" src="./icones/17.PNG" alt="gerenciador-de-dispositivos">
+            <span class="item-titulo">Gerenciador de Dispositivos</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: colorcpl">
+            <img class="item-imagem" src="./icones/18.PNG" alt="gerenciador-de-cores">
+            <span class="item-titulo">Gerenciador de Cores</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/19.PNG" alt="historico-de-arquivos">
+            <span class="item-titulo">Histórico de Arquivos</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/20.PNG" alt="java">
+            <span class="item-titulo">Java</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/21.PNG" alt="mail-(microsoft-outlook-2016)">
+            <span class="item-titulo">Mail (Microsoft Outlook 2016)</span>
+        </a>
+        <a href="./pages/mouse.html" target="blank" class="item-conteiner" title="Executar: control mouse">
+            <img class="item-imagem" src="./icones/22.PNG" alt="mouse">
+            <span class="item-titulo">Mouse</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: inetcpl.cpl">
+            <img class="item-imagem" src="./icones/23.PNG" alt="opcoes-da-internet">
+            <span class="item-titulo">Opções da Internet</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: powercfg.cpl">
+            <img class="item-imagem" src="./icones/24.PNG" alt="opcoes-de-energia">
+            <span class="item-titulo">Opções de Energia</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/25.PNG" alt="opcoes-de-indexacao">
+            <span class="item-titulo">Opções de Indexação</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: control folders">
+            <img class="item-imagem" src="./icones/26.PNG" alt="opcoes-do-explorador-de-arquivos">
+            <span class="item-titulo">Opções do Explorador de Arquivos </span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/27.PNG" alt="pastas-de-trabalho">
+            <span class="item-titulo">Pastas de Trabalho</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: appwiz.cpl">
+            <img class="item-imagem" src="./icones/28.PNG" alt="programas-e-recursos">
+            <span class="item-titulo">Programas e Recursos</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: computerdefaults">
+            <img class="item-imagem" src="./icones/29.PNG" alt="programas-padrao">
+            <span class="item-titulo">Programas Padrão</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/30.PNG" alt="reconhecimento-de-fala">
+            <span class="item-titulo">Reconhecimento de Fala</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/31.PNG" alt="recuperacao">
+            <span class="item-titulo">Recuperação</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: intl.cpl">
+            <img class="item-imagem" src="./icones/32.PNG" alt="regiao">
+            <span class="item-titulo">Região</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/33.PNG" alt="reproducao-automatica">
+            <span class="item-titulo">Reprodução Automática</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: wscui.cpl">
+            <img class="item-imagem" src="./icones/34.PNG" alt="seguranca-e-manutencao">
+            <span class="item-titulo">Segurança e Manutenção</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: msinfo32">
+            <img class="item-imagem" src="./icones/35.PNG" alt="sistema">
+            <span class="item-titulo">Sistema</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: contol.exe /name Microsoft.Troubleshooting">
+            <img class="item-imagem" src="./icones/36.PNG" alt="solucao-de-problemas">
+            <span class="item-titulo">Solução de problemas</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: mmsys.cpl">
+            <img class="item-imagem" src="./icones/37.PNG" alt="som">
+            <span class="item-titulo">Som</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: control keyboard">
+            <img class="item-imagem" src="./icones/38.PNG" alt="teclado">
+            <span class="item-titulo">Teclado</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+            <img class="item-imagem" src="./icones/39.PNG" alt="telefone-e-modem">
+            <span class="item-titulo">Telefone e Modem</span>
+        </a>
+        <a href="" target="blank" class="item-conteiner" title="Executar: firewall.cpl">
+            <img class="item-imagem" src="./icones/40.PNG" alt="firewall-do-windows">
+            <span class="item-titulo"> Windows Defender Firewall</span>
+        </a>
+    </main>
     <footer>
-        <span>Sameul Rodrigues de Matos</span>
+        <span>Copyright @ 2022 | Samuel Rodrigues de Matos</span>
     </footer>
 </body>
 </html>
