--- a/funcao/admin.html
+++ b/funcao/admin.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Ferramentas Administrativas</title>
 </head>
 <body>
-    <div class="conteiner">
-        <div class="texto">
-            <h1>
-                Ferramentas Administrativas
-            </h1>
-            <p>
-                Ferramentas para administradores do sistema e usuários avançados. As ferramentas na pasta podem variar de acordo com a edição do Windows que você está usando.
-            </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Ferramentas Administrativas</h1>
+                <p> Ferramentas para administradores do sistema e usuários avançados, . 
+                    As ferramentas na pasta podem variar de acordo com a edição do Windows que você está usando.</p>
+            </div>
+                <a href="/index.html">Voltar</a>
         </div>
-    </div>
+    </main>
 </body>
 </html>
