--- a/funcao/armazenamento.html
+++ b/funcao/armazenamento.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Espaços de Armazenamento</title>
 </head>
 <body>
-    <div class="conteiner">
-        <div class="texto">
-            <h1>
-                Espaços de Armazenamento
-            </h1>
-            <p>
-                Os Espaços de Armazenamento permitem que os usuários criem uma unidade de armazenamento lógico virtualizado além da capacidade de armazenamento em pool. 
-                Cada unidade virtual / lógica ou espaço de armazenamento pode ser usado como uma unidade de disco típica, com a opção de formatar, proteger e segregar dados.
-            </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Espaços de Armazenamento</h1>
+                <p> Os Espaços de Armazenamento permitem que os usuários criem uma unidade de armazenamento lógico virtualizado 
+                        além da capacidade de armazenamento em pool. Cada unidade virtual / lógica ou espaço de armazenamento pode 
+                        ser usado como uma unidade de disco típica, com a opção de formatar, proteger e segregar dados.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
         </div>
-    </div>
+    </main>
+</main>
 </body>
 </html>
