--- a/funcao/autodesk.html
+++ b/funcao/autodesk.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Autodesk Plot Style Manager</title>
 </head>
 <body>
-    <p> 
-        Faz a plotagem de todos os objetos no viewport atual, exceto os objetos em camadas congeladas. A partir da guia de layout, 
-        toda a geometria no espaço de papel é plotada. O desenho pode ser regenerado para recalcular as extensões antes da plotagem.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Autodesk Plot Style Manager</h1>
+                <p> Faz a plotagem de todos os objetos no viewport atual, exceto os objetos em camadas congeladas. A partir da guia de layout, 
+                    toda a geometria no espaço de papel é plotada. O desenho pode ser regenerado para recalcular as extensões antes da plotagem.
+                </p>
+            </div>
+                <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
