--- a/funcao/backup.html
+++ b/funcao/backup.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Backup e Restauração (Windows 7)</title>
 </head>
 <body>
-    <p>
-        O processo de recuperar dados do backup realizado é conhecido como restauração e,
-        mais importante que manter as cópias de segurança atualizadas, conseguir restaurá-las em caso de desastre é imprescindível.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Backup e Restauração (Windows 7)</h1>
+                <p> O processo de recuperar dados do backup realizado é conhecido como restauração e,
+                    mais importante que manter as cópias de segurança atualizadas, conseguir restaurá-las em caso de desastre é imprescindível.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
