--- a/funcao/creden.html
+++ b/funcao/creden.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Gerenciador de Credenciais</title>
 </head>
 <body>
-    <p>
-        As credenciais usadas na autenticação são documentos digitais que associam
-        a identidade do usuário a alguma forma de verificação de autenticidade, como um certificado, 
-        uma senha ou um PIN ele permite gerencia-las.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Gerenciador de Credenciais</h1>
+                <p> As credenciais usadas na autenticação são documentos digitais que associam
+                    a identidade do usuário a alguma forma de verificação de autenticidade, como um certificado, 
+                    uma senha ou um PIN ele permite gerencia-las.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
