--- a/funcao/criptografia.html
+++ b/funcao/criptografia.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criptografia de Unidade de disco BitLocker</title>
+    <link rel="stylesheet" href="stylef.css">
+    <title>Criptografia de Unidade de Disco BitLocker</title>
 </head>
 <body>
-    <p>
-        impede que usuários não autorizados violem a proteção dos dados do Windows em computadores perdidos, roubados ou desativados de maneira inadequada. 
-        Todos os arquivos do usuário e do sistema são criptografados, incluindo arquivos de swap e de hibernação.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Criptografia de Unidade de Disco BitLocker</h1>
+                <p> Impede que usuários não autorizados violem a proteção dos dados do Windows em computadores perdidos, roubados ou desativados de maneira inadequada. 
+                    Todos os arquivos do usuário e do sistema são criptografados, incluindo arquivos de swap e de hibernação.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
