--- a/funcao/dispeimp.html
+++ b/funcao/dispeimp.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Dispositivos e Impressoras</title>
 </head>
 <body>
-    <p>
-        Impressora ou dispositivo de impressão é um periférico que, quando conectado a um computador ou a uma rede de computadores, 
-        tem a função de dispositivo de saída, imprimindo textos, gráficos ou qualquer outro resultado de uma aplicação.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Dispositivos e Impressoras</h1>
+                <p>Impressora ou dispositivo de impressão é um periférico que, quando conectado a um computador ou a uma rede de computadores, 
+                    tem a função de dispositivo de saída, imprimindo textos, gráficos ou qualquer outro resultado de uma aplicação.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
