--- a/funcao/facilidade.html
+++ b/funcao/facilidade.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Central de Facilidade de Acesso</title>
 </head>
 <body>
-    <p>
-        Facilitar o uso do mouse, Facilitar o uso do teclado e Usar alternativas visuais ou de texto para sons.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Central de Facilidade de Acesso</h1>
+                <p>Facilitar o uso do mouse, Facilitar o uso do teclado e Usar alternativas visuais ou de texto para sons.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
