--- a/funcao/fontes.html
+++ b/funcao/fontes.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Fontes</title>
 </head>
 <body>
-    <p>
-        Adiciona,altera e gerencia fontes no computador
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Fontes</h1>
+                <p> Permite Visualizar, Excluir, Adicionar, Mostra ou Oculta, Altera e Gerencia fontes no computador.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+    </div>
+    </main>
 </body>
 </html>
