--- a/funcao/gdispos.html
+++ b/funcao/gdispos.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Gerenciador de Dispositivos</title>
 </head>
 <body>
-    <p>
-        Ele permite que os usuários visualizem e controlem o hardware conectado ao computador. 
-        Quando uma peça de hardware não está funcionando, o hardware incorreto é destacado para que o usuário o manipule.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Gerenciador de Dispositivos</h1>
+                <p>Ele permite que os usuários visualizem e controlem o hardware conectado ao computador. 
+                    Quando uma peça de hardware não está funcionando, o hardware incorreto é destacado para que o usuário o manipule.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
