--- a/funcao/mail.html
+++ b/funcao/mail.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylef.css">
-    <title>Autodesk Plotter Manager</title>
+    <title>Mail (Microsoft Outlook 2016)</title>
 </head>
 <body>
     <main>
         <div class="conteiner">
             <div class="texto">
-                <h1>Autodesk Plotter Manager</h1>
-                <p>Use a caixa de diálogo Gerenciador de plotagem para criar e gerenciar grandes listas de plotagem e enviar qualquer quantidade de trabalhos de plotagem para uma plotadora ou impressora.
+                <h1>Mail (Microsoft Outlook 2016)</h1>
+                <p>Perfis do Microsoft Outlook
                 </p>
             </div>
             <a href="/index.html">Voltar</a>
