--- a/funcao/progerecurs.html
+++ b/funcao/progerecurs.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylef.css">
-    <title>Autodesk Plotter Manager</title>
+    <title>Programas e Recursos</title>
 </head>
 <body>
     <main>
         <div class="conteiner">
             <div class="texto">
-                <h1>Autodesk Plotter Manager</h1>
-                <p>Use a caixa de diálogo Gerenciador de plotagem para criar e gerenciar grandes listas de plotagem e enviar qualquer quantidade de trabalhos de plotagem para uma plotadora ou impressora.
+                <h1>Programas e Recursos</h1>
+                <p>Vários recursos como modificar hora e data obter informações sobre o 
+                    desempenho gerenciar aplicativos configurar núcleo de memória ram entre outros diversos tipos de configurações...
                 </p>
             </div>
             <a href="/index.html">Voltar</a>
