--- a/funcao/tarefas.html
+++ b/funcao/tarefas.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Barra de Tarefas e Navegação</title>
 </head>
 <body>
-    <p>
-        A barra de tarefas contém todas as informações sobre os programas que estão sendo executados agora,
-        e principalmente o botão Iniciar. Esse botão dá acesso aos programas instalados no seu computador.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Barra de Tarefas e Navegação</h1>
+                <p>A barra de tarefas contém todas as informações sobre os programas que estão sendo executados agora,
+                    e principalmente o botão Iniciar. Esse botão dá acesso aos programas instalados no seu computador.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
