--- a/funcao/usuario.html
+++ b/funcao/usuario.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Contas de Usuário</title>
 </head>
 <body>
-    <p>
-        As contas de usuário permitem que você compartilhe um computador com várias pessoas, 
-        enquanto mantém seus próprios arquivos e configurações. Cada pessoa acessa a sua conta com um nome de usuário e uma senha.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Contas de Usuário</h1>
+                <p>As contas de usuário permitem que você compartilhe um computador com várias pessoas, 
+                    enquanto mantém seus próprios arquivos e configurações. Cada pessoa acessa a sua conta com um nome de usuário e uma senha.
+                </p>
+            </div>
+                <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
