--- a/funcao/dataehora.html
+++ b/funcao/dataehora.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Data e Hora</title>
 </head>
 <body>
-    <p>
-        As funções de data e de hora, como o próprio nome já diz, são as funções que  permitem editar o horário e a data atual automaticamente ou manuelmente.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Data e Hora</h1>
+                <p> As funções de data e de hora, como o próprio nome já diz, são as funções 
+                    que permitem editar o horário e a data atual automaticamente ou manuelmente.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
