--- a/funcao/gcores.html
+++ b/funcao/gcores.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylef.css">
-    <title>Autodesk Plotter Manager</title>
+    <title>Gerenciamento de Cores</title>
 </head>
 <body>
     <main>
         <div class="conteiner">
             <div class="texto">
-                <h1>Autodesk Plotter Manager</h1>
-                <p>Use a caixa de diálogo Gerenciador de plotagem para criar e gerenciar grandes listas de plotagem e enviar qualquer quantidade de trabalhos de plotagem para uma plotadora ou impressora.
+                <h1>Gerenciamento de Cores</h1>
+                <p>Exibir e atualizar as configurações de Hardware e o driver do dispositivo
                 </p>
             </div>
             <a href="/index.html">Voltar</a>
-        </div>
+    </div>
     </main>
 </body>
 </html>
