--- a/funcao/openergia.html
+++ b/funcao/openergia.html
@@ -1,17 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylef.css">
-    <title>Autodesk Plotter Manager</title>
+    <title>Opções de Energia</title>
 </head>
 <body>
     <main>
         <div class="conteiner">
             <div class="texto">
-                <h1>Autodesk Plotter Manager</h1>
-                <p>Use a caixa de diálogo Gerenciador de plotagem para criar e gerenciar grandes listas de plotagem e enviar qualquer quantidade de trabalhos de plotagem para uma plotadora ou impressora.
+                <h1>Opções de Energia</h1>
+                <p>Nas Opções de Energia, podemos configurar quanto tempo o monitor ou o HD 
+                    podem ser desligados ou suspensos, escolher a função dos botões de energia, e colocar uma senha para desbloquear o computador quando sair do estado de suspensão
                 </p>
             </div>
             <a href="/index.html">Voltar</a>
