--- a/funcao/rede.html
+++ b/funcao/rede.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Central de Rede e Compartilhamento</title>
 </head>
 <body>
-    <p>
-        Permite ver informações sobre sua rede e permite fazer alterações que podem afetar o modo como você acessa recursos na rede.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Central de Rede e Compartilhamento</h1>
+                <p>Permite ver informações sobre sua rede e permite fazer alterações que podem afetar o modo como você acessa recursos na rede.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
