--- a/funcao/remoteapp.html
+++ b/funcao/remoteapp.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Conexões de Remote App e Área de Trabalho</title>
 </head>
 <body>
-    <p>
-        A área de trabalho remota é a maneira pela qual o trabalho à distância é possibilitado. 
-        Assim, você pode acessar outro computador a partir do seu sem maiores dificuldades
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Conexões de Remote App e Área de Trabalho</h1>
+                <p>A área de trabalho remota é a maneira pela qual o trabalho à distância é possibilitado. 
+                    Assim, você pode acessar outro computador a partir do seu sem maiores dificuldades
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
