--- a/funcao/sincronização.html
+++ b/funcao/sincronização.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylef.css">
     <title>Central de Sincronização</title>
 </head>
 <body>
-    <p>
-        Essa função é bastante cômoda para o usuário: por padrão, o sistema vem com essa opção acionada e lhe permite, 
-        por meio do canal de armazenamento em nuvem Onedrive, da Microsoft, compartilhar diversas coisas entre vários dispositivos.
-    </p>
+    <main>
+        <div class="conteiner">
+            <div class="texto">
+                <h1>Central de Sincronização</h1>
+                <p>Essa função é bastante cômoda para o usuário: por padrão, o sistema vem com essa opção acionada e lhe permite, 
+                    por meio do canal de armazenamento em nuvem Onedrive, da Microsoft, compartilhar diversas coisas entre vários dispositivos.
+                </p>
+            </div>
+            <a href="/index.html">Voltar</a>
+        </div>
+    </main>
 </body>
 </html>
