--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
             <img class="item-imagem" src="./icones/17.PNG" alt="gerenciador-de-dispositivos">
             <span class="item-titulo">Gerenciador de Dispositivos</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: colorcpl">
+        <a href="./funcao/gcores.html" target="blank" class="item-conteiner" title="Executar: colorcpl">
             <img class="item-imagem" src="./icones/18.PNG" alt="gerenciador-de-cores">
             <span class="item-titulo">Gerenciador de Cores</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/harquivos.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/19.PNG" alt="historico-de-arquivos">
             <span class="item-titulo">Histórico de Arquivos</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/java.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/20.PNG" alt="java">
             <span class="item-titulo">Java</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/mail.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/21.PNG" alt="mail-(microsoft-outlook-2016)">
             <span class="item-titulo">Mail (Microsoft Outlook 2016)</span>
         </a>
@@ -103,71 +103,71 @@
             <img class="item-imagem" src="./icones/23.PNG" alt="opcoes-da-internet">
             <span class="item-titulo">Opções da Internet</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: powercfg.cpl">
+        <a href="./funcao/openergia.html" target="blank" class="item-conteiner" title="Executar: powercfg.cpl">
             <img class="item-imagem" src="./icones/24.PNG" alt="opcoes-de-energia">
             <span class="item-titulo">Opções de Energia</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/opindex.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/25.PNG" alt="opcoes-de-indexacao">
             <span class="item-titulo">Opções de Indexação</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: control folders">
+        <a href="./funcao/opexarq.html" target="blank" class="item-conteiner" title="Executar: control folders">
             <img class="item-imagem" src="./icones/26.PNG" alt="opcoes-do-explorador-de-arquivos">
             <span class="item-titulo">Opções do Explorador de Arquivos </span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/pastrab.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/27.PNG" alt="pastas-de-trabalho">
             <span class="item-titulo">Pastas de Trabalho</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: appwiz.cpl">
+        <a href="./funcao/progerecurs.html" target="blank" class="item-conteiner" title="Executar: appwiz.cpl">
             <img class="item-imagem" src="./icones/28.PNG" alt="programas-e-recursos">
             <span class="item-titulo">Programas e Recursos</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: computerdefaults">
+        <a href="./funcao/progspdr.html" target="blank" class="item-conteiner" title="Executar: computerdefaults">
             <img class="item-imagem" src="./icones/29.PNG" alt="programas-padrao">
             <span class="item-titulo">Programas Padrão</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/recfala.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/30.PNG" alt="reconhecimento-de-fala">
             <span class="item-titulo">Reconhecimento de Fala</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/recupercao.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/31.PNG" alt="recuperacao">
             <span class="item-titulo">Recuperação</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: intl.cpl">
+        <a href="./funcao/regiao.html" target="blank" class="item-conteiner" title="Executar: intl.cpl">
             <img class="item-imagem" src="./icones/32.PNG" alt="regiao">
             <span class="item-titulo">Região</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/reprodauto.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/33.PNG" alt="reproducao-automatica">
             <span class="item-titulo">Reprodução Automática</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: wscui.cpl">
+        <a href="./funcao/segemanut.html" target="blank" class="item-conteiner" title="Executar: wscui.cpl">
             <img class="item-imagem" src="./icones/34.PNG" alt="seguranca-e-manutencao">
             <span class="item-titulo">Segurança e Manutenção</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: msinfo32">
+        <a href="./funcao/sistema.html" target="blank" class="item-conteiner" title="Executar: msinfo32">
             <img class="item-imagem" src="./icones/35.PNG" alt="sistema">
             <span class="item-titulo">Sistema</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: contol.exe /name Microsoft.Troubleshooting">
+        <a href="./funcao/solucproblem.html" target="blank" class="item-conteiner" title="Executar: contol.exe /name Microsoft.Troubleshooting">
             <img class="item-imagem" src="./icones/36.PNG" alt="solucao-de-problemas">
             <span class="item-titulo">Solução de problemas</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: mmsys.cpl">
+        <a href="./funcao/som.html" target="blank" class="item-conteiner" title="Executar: mmsys.cpl">
             <img class="item-imagem" src="./icones/37.PNG" alt="som">
             <span class="item-titulo">Som</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: control keyboard">
+        <a href="./funcao/teclado.html" target="blank" class="item-conteiner" title="Executar: control keyboard">
             <img class="item-imagem" src="./icones/38.PNG" alt="teclado">
             <span class="item-titulo">Teclado</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: ... ">
+        <a href="./funcao/telemodem.html" target="blank" class="item-conteiner" title="Executar: ... ">
             <img class="item-imagem" src="./icones/39.PNG" alt="telefone-e-modem">
             <span class="item-titulo">Telefone e Modem</span>
         </a>
-        <a href="" target="blank" class="item-conteiner" title="Executar: firewall.cpl">
+        <a href="./funcao/firewall.html" target="blank" class="item-conteiner" title="Executar: firewall.cpl">
             <img class="item-imagem" src="./icones/40.PNG" alt="firewall-do-windows">
             <span class="item-titulo"> Windows Defender Firewall</span>
         </a>
